# Programmier-bung_2

./: README.md  example1.py  plot.py  power_curve.py  pyproject.toml  sort.py
